# yewi18n-app-template

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package.json  tailwind.config.js
src/: main.rs
src/app/: mod.rs  page.rs  routes.rs
src/app/not_found/: mod.rs
src/i18n/en/: base.json
src/i18n/fr/: base.json
src/styles/: features.scss  main.scss
src/types/: enums.rs  mod.rs
